--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Learn Git</title>
 </head>
 <body>
-    <h1>Hi, I'm learning Git</h1>
-
-    <a href="https://fti.unai.edu">FTI UNAI</a>
+    <div class="container text-white bg-blue-100 mx-auto p-4">
+        <h1 class="bg-red-600 px-8 py-4 rounded-lg text-center shadow-md">Hi, I'm learning Git</h1>
+        
+        <a href="https://fti.unai.edu">FTI UNAI</a>
+    </div>
 </body>
 </html>
