--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 </head>
 <body>
     <header>
-        <a></a>
+        <a href="#"><img src="images/LogoChatime.png" alt="LogoChatime"></a>
         <nav>
             <ul>
                 <li><a href=#></a>BIODATA</li>
                 <li><a href=#></a>CONTACT US</li>
                 <li><a href=#></a>POSTS</li>
                 <li><a href=#></a>GALLERY</li>
-                <li><a href=#></a></li>
-                <li><a href=#></a></li>
-                <li><a href=#></a></li>
+                <li><a href=#></a>STORE LOCATION</li>
+                <li><a href=#></a>ATEALIER</li>
+                <li><a href=#></a>MOBILE APP</li>
             </ul>
         </nav>
     </header>
