--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </head>
 <body>
     <header>
-        <a href="#"><img src="images/LogoChatime.png" alt="LogoChatime"></a>
+        <a href="#"><img class="" src="" alt="LogoChatime"></a>
         <nav>
             <ul>
                 <li><a href=#></a>BIODATA</li>
