--- a/index.html
+++ b/index.html
@@ -88,13 +88,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="images/IconChatime.png">
     <title>Chatime Indonesia</title>
 </head>
 <body>
     <header>
-        <a href="#"><img class="" src="" alt="LogoChatime"></a>
+        <a href="#"><img class="" src="images/logo-chatime.png" alt="LogoChatime"></a>
         <nav>
             <ul>
                 <li><a href=#></a>BIODATA</li>
