--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Chatime Indonesia</title>
+    <link rel="icon" type="image/x-icon" href="images/IconChatime.png">
 </head>
 <body>
     <header>
