--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@
     <title>Chatime Indonesia</title>
     <link rel="icon" type="image/x-icon" href="images/IconChatime.png">
 </head>
-<body>
+<body class="font-sans min-h-lvh">
     <header>
-        <a href="#"><img class="" src="images/logo-chatime.png" alt="LogoChatime"></a>
-        <nav>
-            <ul>
-                <li><a href=#></a>BIODATA</li>
-                <li><a href=#></a>CONTACT US</li>
-                <li><a href=#></a>POSTS</li>
-                <li><a href=#></a>GALLERY</li>
-                <li><a href=#></a>STORE LOCATION</li>
-                <li><a href=#></a>ATEALIER</li>
-                <li><a href=#></a>MOBILE APP</li>
+        <nav class="container flex  flex-col md:flex-row justify-around py-2.5 text-center md:text-left items-center bg-purple-800">
+            <a href="#"><img src="images/logo-chatime.png" alt="LogoChatime"></a>
+            <ul class="flex flex-col md:flex-row items-center space-x-4 text-white font-bold">
+                <li class="hover:text-pink-500"><a href=#>BIODATA</a></li>
+                <li class="hover:text-pink-500"><a href=#>CONTACT US</a></li>
+                <li class="hover:text-pink-500"><a href=#>POSTS</a></li>
+                <li class="hover:text-pink-500"><a href=#>GALLERY</a></li>
+                <li class="hover:text-pink-500"><a href=#>STORE LOCATION</a></li>
+                <li class="hover:text-pink-500"><a href=#>ATEALIER</a></li>
+                <li class="pb-1.5 pt-1 px-2 bg-pink-500 rounded-2xl"><a href=#>MOBILE APP</a></li>
             </ul>
         </nav>
     </header>
