--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
                 <li class="pb-1.5 pt-1 px-2 bg-pink-500 rounded-2xl"><a href=#>MOBILE APP</a></li>
             </ul>
         </nav>
+        <ul class="flex flex-col justify-start items-center space-y-0 text-white font-bold fixed top-0 right-0 h-screen w-60 bg-white shadow-xl text-center">
+            <li class="border-y py-2 hover:text-red-600 w-full"><a class="w-full" href=#>BIODATA</a></li>
+            <li class="border-y py-2 hover:text-red-600 w-full"><a class="w-full" href=#>CONTACT US</a></li>
+            <li class="border-y py-2 hover:text-red-600 w-full"><a class="w-full" href=#>POSTS</a></li>
+            <li class="border-y py-2 hover:text-red-600 w-full"><a class="w-full" href=#>GALLERY</a></li>
+            <li class="border-y py-2 hover:text-red-600 w-full"><a class="w-full" href=#>STORE LOCATION</a></li>
+            <li class="border-y py-2 hover:text-red-600 w-full"><a class="w-full" href=#>ATEALIER</a></li>
+            <li class="py-2 bg-pink-500 w-full"><a href=#>MOBILE APP</a></li>
+        </ul>
     </header>
 </body>
 </html>
