--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Learn Git</title>
 </head>
 <body>
-    <h1>Hi, I'm learning Git</h1>
+    <h1>Hi, I'm learning</h1>
 
     <a href="https://fti.unai.edu">FTI UNAI</a>
 </body>
