--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body class="font-sans min-h-lvh">
     <header>
-        <nav class="container flex md:flex-row justify-around py-2.5 text-center md:text-left items-center bg-purple-800">
-            <a class="block md:hidden" onclick=showSidebar() href="#"><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a>
+        <nav class="container flex lg:flex-row justify-around py-2.5 text-center items-center bg-purple-800">
+            <a class="block lg:hidden" onclick=showSidebar() href="#"><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a>
             <a href="#"><img src="images/logo-chatime.png" alt="LogoChatime"></a>
-            <ul class="flex flex-col md:flex-row items-center space-x-4 text-white font-bold">
-                <li class="hover:text-pink-500 md:block hidden"><a href=#>BIODATA</a></li>
-                <li class="hover:text-pink-500 md:block hidden"><a href=#>CONTACT US</a></li>
-                <li class="hover:text-pink-500 md:block hidden"><a href=#>POSTS</a></li>
-                <li class="hover:text-pink-500 md:block hidden"><a href=#>GALLERY</a></li>
-                <li class="hover:text-pink-500 md:block hidden"><a href=#>STORE LOCATION</a></li>
-                <li class="hover:text-pink-500 md:block hidden"><a href=#>ATEALIER</a></li>
-                <li class="pb-1.5 pt-1 px-2 bg-pink-500 rounded-2xl md:block hidden"><a href=#>MOBILE APP</a></li>
+            <ul class="flex flex-col lg:flex-row items-center space-x-4 text-white font-bold">
+                <li class="hover:text-pink-500 lg:block hidden"><a href=#>BIODATA</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href=#>CONTACT US</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href=#>POSTS</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href=#>GALLERY</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href=#>STORE LOCATION</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href=#>ATEALIER</a></li>
+                <li class="pb-1.5 pt-1 px-2 bg-pink-500 rounded-2xl lg:block hidden"><a href=#>MOBILE APP</a></li>
             </ul>
         </nav>
         <ul id="sidebar" class="hidden flex flex-col justify-start place-self-start space-y-0 font-bold fixed top-0 left-0 h-screen w-60 z-auto bg-white shadow-xl">
