not even close to being done

--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
         </ul>
     </header>
     <footer class="flex flex-col bg-gray-400">
-        <div class="flex flex-col lg:flex-row bg-pink-100 justify-around items-center">
-            <div class="flex flex-col items-center lg:items-baseline">
-                <p>Get in touch with us</p>
-                <p>Subscribe for updated promo, news and events</p>
+        <div class="flex flex-col lg:flex-row bg-pink-400 justify-around items-center">
+            <div class="flex flex-col items-center lg:items-baseline text-white lg:pr-60">
+                <p class="text-4xl font-bold">Get in touch with us</p>
+                <p class="text-lg font-bold">Subscribe for updated promo, news and events</p>
             </div>
-            <form>
-                <i class="fas fa-envelope"></i>
+            <form class="flex items-center">
+                <i class="fas fa-envelope text-purple-800 bg bg-white"></i>
                 <input type="email" placeholder="Your Email">
-                <button type="submit">Subscribe</button>
+                <button class="text-white bg-green-500" type="submit">Subscribe</button>
             </form>
         </div>
-        <div class="flex flex-col-reverse lg:flex-row justify-between items-center">
-            <ul class="flex flex-row space-x-2.5">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>   
+        <div class="flex flex-col-reverse lg:flex-row justify-between items-center text-purple-800 lg:pt-2 lg:pb-6">
+            <ul class="flex flex-row space-x-2.5 lg:pl-7 font-bold text-2xl">
+                <li class="hover:text-pink-500"><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li class="hover:text-pink-500"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li class="hover:text-pink-500"><a href="#"><i class="fab fa-instagram"></i></a></li>   
             </ul>
-            <ul class="flex flex-col lg:flex-row items-center space-x-2">
-                <li><a href="https://fti.unai.edu/" target="_blank">FTI UNAI</a></li>
-                <li><a href="https://unai.edu/" target="_blank">UNAI Website</a></li>
+            <ul class="flex flex-col lg:flex-row items-center lg:space-x-4 font-bold lg:pr-7">
+                <li class="hover:text-pink-500"><a href="https://fti.unai.edu/" target="_blank">FTI UNAI</a></li>
+                <li class="hover:text-pink-500"><a href="https://unai.edu/" target="_blank">UNAI Website</a></li>
             </ul>
         </div>
     </footer>
