--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             <li class="py-2 bg-pink-500 w-full text-white text-center "><a href=#>MOBILE APP</a></li>
         </ul>
     </header>
-    <footer class="flex flex-col bg-gray-400">
-        <div class="flex flex-col lg:flex-row bg-pink-400 justify-around items-center">
-            <div class="flex flex-col items-center lg:items-baseline text-white lg:pr-60">
-                <p class="text-4xl font-bold">Get in touch with us</p>
-                <p class="text-lg font-bold">Subscribe for updated promo, news and events</p>
+    <footer class="flex flex-col">
+        <div class="flex flex-col lg:flex-row bg-pink-400 justify-around items-center bg-no-repeat bg-cover w-full min-w-full y-auto lg:py-32 lg:pr-8px" style="background-image: url(images/footerImage.png)">
+            <div class="flex flex-col items-center lg:items-baseline text-white lg:pr-60 pb-6 lg:pb-0">
+                <p class="text-2xl lg:text-4xl font-bold">Get in touch with us</p>
+                <p class="text-sm lg:text-lg font-bold">Subscribe for updated promo, news and events</p>
             </div>
             <form class="flex items-center">
-                <i class="fas fa-envelope text-purple-800 bg bg-white"></i>
-                <input type="email" placeholder="Your Email">
-                <button class="text-white bg-green-500" type="submit">Subscribe</button>
+                <i class="fas fa-envelope text-purple-800 bg bg-white lg:text-2xl lg:py-1 lg:px-6"></i>
+                <input class="lg:text-xl lg:py-1.5 lg:px-2" type="email" placeholder="Your Email">
+                <button class="lg:text-xl lg:py-1.5 lg:px-4 text-white bg-green-500 text" type="submit">Subscribe</button>
             </form>
         </div>
         <div class="flex flex-col-reverse lg:flex-row justify-between items-center text-purple-800 lg:pt-2 lg:pb-6">
