--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="carousel.css">
 </head>
 <body class="font-sans min-h-lvh">
-    <header class="relative z-50">
-        <nav class="container flex lg:flex-row justify-around py-2.5 text-center items-center bg-purple-800 w-full min-w-full">
+    <header class="relative z-50 ">
+        <nav class="container flex lg:flex-row justify-around py-2.5 text-center items-center bg-purple-800 w-full min-w-full fixed">
             <a class="block lg:hidden" onclick=showSidebar() href="#"><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a>
             <a class="size-1/2 lg:size-auto" href="#"><img src="images/logo-chatime.png" alt="LogoChatime"></a>
             <ul class="flex flex-col lg:flex-row items-center space-x-4 text-white font-bold">
@@ -46,38 +46,121 @@
         <button id="prev" class="md:w-12 md:h-12 md:text-xl w-8 h-8 text-xs" onclick="prevSlide()">&#10094;</button>
         <button id="next" class="md:w-12 md:h-12 md:text-xl w-8 h-8 text-xs" onclick="nextSlide()">&#10095;</button>
     </div>
-    <!--  -->
-    <div class="bg-pink-300">
-        <div class="flex flex-col items-center md:pt-20 md:pb-10 text-purple-800 font-bold">
-            <h1 class=" text-1xl md:text-5xl md:pb-10">Our Menu</h1>
-            <p class="text-xs md:text-xl">Semua menu Chatime dibuat dengan</p>
-            <p class="text-xs md:text-xl">menggunakan bahan-bahan pilihan terbaik untuk</p>
-            <p class="text-xs md:text-xl">menghasilkan minuman yang menyegarkan dan</p>
-            <p class="text-xs md:text-xl">menenangkan.</p>
-        </div>  
-        <ul class="md:flex md:flex-row md:items-center md:size-10/12 md:pl-48">
-            <li><a href="#"><img src="images/chocolate-mouse.png"></a></li>
-            <li><a href="#"><img src="images/matcha-latte.png"></a></li>
-            <li><a href="#"><img src="images/hzel-choco.png"></a></li>
-            <li><a href="#"><img src="images/brown-sugar-milk-tea.png"></a></li>
-            <li><a href="#"><img src="images/milk-tea.png"></a></li>   
-        </ul>
-        <img class="md:relative" src="images/rounded_rect.png">
-        <div class="md:flex md:flex-row">
-            <ul class="md:relative">
-                <li><div>
-                    <p>Minum Chatime Tanpa Antre?</p>
-                    <p style="font-weight: bold;">Download My F&B ID App</p>
-                </div></li>
-                <li><img src="images/separatebar.png" alt="separatebar"></li>
-                <li><a href="#"><img class="store" src="images/playstore.png" alt="playstore"></a></li>
-                <li><a href="#"><img class="store" src="images/appstore.png" alt="appstore"></a></li>
-                <li><img src="images/phone_left.png"></li>
-                <li><img src="images/phone_right.png"></li>
-            </ul>
+    <div class="block md:hidden">
+        <div class="relative bg-cover bg-no-repeat pt-8 pb-24 bottom-8" style="background-image: url(images/background1.png) ;">
+            <div class="flex flex-col items-center md:pt-20 md:pb-10 text-purple-800 font-bold">
+                <h1 class=" text-1xl md:text-5xl md:pb-10">Our Menu</h1>
+                <p class="text-xs md:text-xl">Semua menu Chatime dibuat dengan</p>
+                <p class="text-xs md:text-xl">menggunakan bahan-bahan pilihan terbaik</p>
+                <p class="text-xs md:text-xl">untuk menghasilkan minuman yang</p>
+                <p class="text-xs md:text-xl">menyegarkan dan menenangkan.</p>
+            </div>  
+        </div>
+
+        <div class="flex size-56 flex-row ml-14">
+            <a href="#"><img src="images/chocolate-mouse.png"></a>
+            <a href="#"><img src="images/matcha-latte.png"></a>
+        </div>    
+        <div class="flex flex-row">
+            <div>
+                <p>Minum Chatime Tanpa</p>
+                <p>Antre>?</p>
+                <p>Download My F&B ID APP</p>
+            </div>
+            <img src="images/separatebar.png">
+            <img src="images/playstore.png">
+            <img src="images/appstore.png">
+            <div>
+                <img src="images/phone_left.png">
+                <img src="images/phone_right.png">
+            </div>
         </div>
     </div>
-    <!--  -->
+
+    <div class="hidden md:block">
+    <div class="part1">
+        <div class="ourmenu">
+            <h1>Our Menu</h1><br><br>
+            <p>Semua menu Chatime dibuat dengan<br> menggunakan bahan-bahan pilihan 
+                terbaik<br> untuk menghasilkan minuman yang<br> menyegarkan dan menenangkan.</p>
+        </div>  
+        <div class="drinks">
+            <ul>
+                <li><a href="#"><img src="images/chocolate-mouse.png"></a></li>
+                <li><a href="#"><img src="images/matcha-latte.png"></a></li>
+                <li><a href="#"><img src="images/hzel-choco.png"></a></li>
+                <li><a href="#"><img src="images/brown-sugar-milk-tea.png"></a></li>
+                <li><a href="#"><img src="images/milk-tea.png"></a></li>   
+            </ul>
+        </div>
+        <div class="download">
+            <img class="rectangle" src="images/rounded_rect.png">
+            <div class="insiderectangle">
+                <ul>
+                    <li><div class="minumchatime">
+                        <p>Minum Chatime Tanpa Antre?</p>
+                        <p style="font-weight: bold;">Download My F&B ID App</p>
+                    </div></li>
+                    <li><img class="separatebar" src="images/separatebar.png" alt="separatebar"></li>
+                    <li><a href="#"><img class="store" src="images/playstore.png" alt="playstore"></a></li>
+                    <li><a href="#"><img class="store" src="images/appstore.png" alt="appstore"></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="phone">
+            <img src="images/phone_left.png">
+            <img src="images/phone_right.png">
+        </div>
+    </div>
+
+    <div class="part2">
+        <div class="upper">
+            <div>
+                <p class="p1">Special Promo</p>
+                <a class="a1" href="#">More Info</a>
+                <a href="#"><img id="m1" src="images/banner-promo-kecil.png" alt="Promo"></a>
+            </div>
+            <div>
+                <p class="p2">News and<br> Event</p>
+                <a class="a2" href="#">More Info</a>
+                <a href="#"><img id="m2" src="images/news-update.png" alt="Promo"></a>
+            </div>
+            <div>
+                <p class="p3">Find Our Outlet</p>
+                <a class="a3" href="#">More Info</a>
+                <a href="#"><img id="m3" src="images/image-toko.png" alt="Promo"></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="part3">
+        <div>
+            <a href="#"><img src="images/purple.jpg" alt="tadaaaa"></a>
+        </div>
+        <div>
+            <a href="#"><img src="images/c1.jpg" alt="milo"></a>
+        </div>
+    </div>
+
+    <div class="part4">
+        <div>
+            <p>Mobile App</p>
+            <a href="#"><img src="images/purple2.jpg" alt="Mobile App"></a>
+            <a href="#"><p id="MoreInfo1">More Info</p></a>
+        </div>
+        <div>
+            <p>Big Order</p>
+            <a href="#"><img src="images/purple3.jpg" alt="Big Order"></a>
+            <a href="#"><p id="pesan">Pengen pesan Chatime dalam jumlah banyak?<br>Cari tahu caranya di sini!</p></a>
+            <a href="#"><p id="MoreInfo2">More Info</p></a>
+        </div>
+    </div>
+    
+    <div id="quality">Best Quality<br> Ingredients</div>
+
+    <div><img id="bannermenu" src="images/BannerMenupremiumIngredients.png" alt="Banner Menu"></div>
+    </div>
+
     <footer class="flex flex-col">
         <div class="flex flex-col lg:flex-row bg-pink-400 justify-start items-center bg-no-repeat bg-cover w-full min-w-full y-auto lg:py-32 lg:pr-8px" style="background-image: url(images/footerImage.png)">
             <div class="flex flex-col items-center lg:items-baseline text-white lg:pr-60 pb-6 lg:pb-0 lg:pl-40">
