--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <a class="block lg:hidden" onclick=showSidebar() href="#"><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a>
             <a class="size-1/2 lg:size-auto" href="#"><img src="images/logo-chatime.png" alt="LogoChatime"></a>
             <ul class="flex flex-col lg:flex-row items-center space-x-4 text-white font-bold">
-                <li class="hover:text-pink-500 lg:block hidden"><a href=#>BIODATA</a></li>
-                <li class="hover:text-pink-500 lg:block hidden"><a href=#>CONTACT US</a></li>
-                <li class="hover:text-pink-500 lg:block hidden"><a href=#>POSTS</a></li>
-                <li class="hover:text-pink-500 lg:block hidden"><a href=#>GALLERY</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href="biodata.html">BIODATA</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href="contact_us.html">CONTACT US</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href="posts.html">POSTS</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href="freepage.html">GALLERY</a></li>
                 <li class="hover:text-pink-500 lg:block hidden"><a href=#>STORE LOCATION</a></li>
                 <li class="hover:text-pink-500 lg:block hidden"><a href=#>ATEALIER</a></li>
                 <li class="pb-1.5 pt-1 px-2 bg-pink-500 rounded-2xl lg:block hidden"><a href=#>MOBILE APP</a></li>
@@ -26,10 +26,10 @@
         </nav>
         <ul id="sidebar" class="hidden flex flex-col justify-start place-self-start space-y-0 font-bold fixed top-0 left-0 h-screen w-60 z-auto bg-white shadow-xl">
             <li class="pb-16 flex justify-end" onclick=hideSidebar()><a href="#"><svg class="text-white bg-pink-500 py-2  px-2" xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 -960 960 960" width="36px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href=#>BIODATA</a></li>
-            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href=#>CONTACT US</a></li>
-            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href=#>POSTS</a></li>
-            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href=#>GALLERY</a></li>
+            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href="biodata.html">BIODATA</a></li>
+            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href="contact_us.html">CONTACT US</a></li>
+            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href="posts.html">POSTS</a></li>
+            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href="freepage.html">GALLERY</a></li>
             <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href=#>STORE LOCATION</a></li>
             <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href=#>ATEALIER</a></li>
             <li class="py-2 bg-pink-500 w-full text-white text-center "><a href=#>MOBILE APP</a></li>
@@ -45,7 +45,7 @@
         </div>
         <button id="prev" class="md:w-12 md:h-12 md:text-xl w-8 h-8 text-xs" onclick="prevSlide()">&#10094;</button>
         <button id="next" class="md:w-12 md:h-12 md:text-xl w-8 h-8 text-xs" onclick="nextSlide()">&#10095;</button>
-    </div>
+    </div class>
     <div class="block md:hidden">
         <div class="relative bg-cover bg-no-repeat pt-8 pb-24 bottom-8" style="background-image: url(images/background1.png) ;">
             <div class="flex flex-col items-center md:pt-20 md:pb-10 text-purple-800 font-bold">
@@ -56,25 +56,24 @@
                 <p class="text-xs md:text-xl">menyegarkan dan menenangkan.</p>
             </div>  
         </div>
-
-        <div class="flex size-56 flex-row ml-14">
-            <a href="#"><img src="images/chocolate-mouse.png"></a>
-            <a href="#"><img src="images/matcha-latte.png"></a>
-        </div>    
-        <div class="flex flex-row">
-            <div>
-                <p>Minum Chatime Tanpa</p>
-                <p>Antre>?</p>
-                <p>Download My F&B ID APP</p>
-            </div>
-            <img src="images/separatebar.png">
-            <img src="images/playstore.png">
-            <img src="images/appstore.png">
-            <div>
-                <img src="images/phone_left.png">
-                <img src="images/phone_right.png">
+        <div class="flex flex-row justify-around text-center mb-8 text-white font-bold">
+            <div class="bg-cover py-12 px-4 rounded-xl" style="background-image: url(images/banner-promo-kecil.png);">
+                <p>Special Promo</p>
+                <a class="bg-green-500 rounded-2xl py-0.5 px-1" href="#">More Info</a>
+                </div>
+            <div class="bg-cover py-16 px-8" style="background-image: url(images/imtired.png);">
+                <p>Your<br>Favorite<br>Menu</p>
+                <a class="bg-green-500 rounded-2xl py-0.5 px-1" href="#">More Info</a>
             </div>
         </div>
+        <div class="size-72 w-screen mb-8 pb-96 bg-cover text-white" style="background-image: url(images/news-update.png);">
+            <p>News and Evets</p>
+            <a class="bg-green-500 rounded-2xl py-0.5 px-1" href="#">More Info</a>
+        </div>
+        <p class="font-bold text-purple-800">Mobile App<br>Big Order</p>
+        <img class="w-screen mb-8" src="images/purple.jpg">
+        <p class="font-bold text-purple-800">Best Quality Ingredients</p>
+        <img class="w-screen mb-8" src="images/BannerMenupremiumIngredients.png">
     </div>
 
     <div class="hidden md:block">
