--- a/biodata.html
+++ b/biodata.html
@@ -57,9 +57,9 @@
                     </p>
                 </div>
             </div>
-            <img class="md:max-w-80 md:h-auto md:rounded-2xl md:mt-32 md:mr-48" src="images/fotokuPt2.jpg" alt="Foto Grafiel">
+            <img class="mt-8 md:max-w-80 md:h-auto md:rounded-2xl md:mt-32 md:mr-48" src="images/fotokuPt2.jpg" alt="Foto Grafiel">
         </div><br><br>
-        
+    </div>
     <footer class="flex flex-col">
         <div class="flex flex-col lg:flex-row bg-pink-400 justify-start items-center bg-no-repeat bg-cover w-full min-w-full y-auto lg:py-32 lg:pr-8px" style="background-image: url(images/footerImage.png)">
             <div class="flex flex-col items-center lg:items-baseline text-white lg:pr-60 pb-6 lg:pb-0 lg:pl-40">
