--- a/biodata.html
+++ b/biodata.html
@@ -18,7 +18,7 @@
                 <li class="hover:text-pink-500 lg:block hidden"><a href="index.html">INDEX</a></li>
                 <li class="hover:text-pink-500 lg:block hidden"><a href="contact_us.html">CONTACT US</a></li>
                 <li class="hover:text-pink-500 lg:block hidden"><a href="posts.html">POSTS</a></li>
-                <li class="hover:text-pink-500 lg:block hidden"><a href="freepage.html">GALLERY</a></li>
+                <li class="hover:text-pink-500 lg:block hidden"><a href="freepage.html">FREEPAGE</a></li>
                 <li class="hover:text-pink-500 lg:block hidden"><a href=#>STORE LOCATION</a></li>
                 <li class="hover:text-pink-500 lg:block hidden"><a href=#>ATEALIER</a></li>
                 <li class="pb-1.5 pt-1 px-2 bg-pink-500 rounded-2xl lg:block hidden"><a href=#>MOBILE APP</a></li>
@@ -29,7 +29,7 @@
             <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href="index.html">INDEX</a></li>
             <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href="contact_us.html">CONTACT US</a></li>
             <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href="posts.html">POSTS</a></li>
-            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href="freepage.html">GALLERY</a></li>
+            <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href="freepage.html">FREEPAGE</a></li>
             <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href=#>STORE LOCATION</a></li>
             <li class="border-y py-2 text-gray-500 hover:text-red-600 text-center w-full"><a class="w-full" href=#>ATEALIER</a></li>
             <li class="py-2 bg-pink-500 w-full text-white text-center "><a href=#>MOBILE APP</a></li>
