--- a/index.html
+++ b/index.html
@@ -36,6 +36,25 @@
         </ul>
     </header>
 
+    <div class="min-h-screen bg-gradient-to-br from-purple-800 to-pink-500 flex items-center justify-center px-4">
+        <div class="max-w-3xl mx-auto text-center">
+            <h1 class="text-4xl md:text-6xl font-bold text-white mb-6">
+                Responsive Web Development Project
+            </h1>
+            
+            <p class="text-lg md:text-xl text-white/90 mb-8">
+                Creating a responsive websites using the power of HTML, CSS, JavaScript, and Tailwind CSS
+            </p>
+            
+            <div class="flex flex-wrap justify-center gap-3">
+                <span class="px-4 py-2 bg-white/20 rounded-full text-white font-medium">HTML</span>
+                <span class="px-4 py-2 bg-white/20 rounded-full text-white font-medium">CSS</span>
+                <span class="px-4 py-2 bg-white/20 rounded-full text-white font-medium">JavaScript</span>
+                <span class="px-4 py-2 bg-white/20 rounded-full text-white font-medium">Tailwind CSS</span>
+            </div>
+        </div>
+    </div>
+
     <div class="carousel-container">
         <div class="carousel-slide" id="carousel-slide">
             <a href="#"><img src="images/rekomendasi-minuman-chatime.jpg" alt="Promo 1"></a>
